--- a/Challenge 1/src/index.html
+++ b/Challenge 1/src/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="icon" href="https://pics.freeicons.io/uploads/icons/png/20235467151582545601-512.png"/>
     <title>The Button Counter</title>
-    <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
   </head>
   <body>
     <!--HEADER-->>
@@ -15,6 +15,7 @@
     </header>
     <!--MAIN-->
     <div class="container">
+      <span class="square"></span>
         <h3 class="text">Click the button to increase the count</h3>
         <button class="button" id="button">Click Me</button>
         <p class="text">Count: <a id="clicks">0</a></p>
